--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_home_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
@@ -81,7 +81,7 @@
         android:text="Randomize Recipes"
         android:fontFamily="@font/jakartasanssemibold"
         android:textSize="18sp"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="42dp"
         app:layout_constraintTop_toBottomOf="@id/home_search_text"
         app:layout_constraintLeft_toLeftOf="@id/home_search_text"/>
 
@@ -100,7 +100,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recycle_view_recipes"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_height="360dp"
         app:layout_constraintTop_toBottomOf="@id/home_randomize_recipes_button"
         app:layout_constraintBottom_toTopOf="@id/home_frame_navigation"
         android:orientation="horizontal"
