--- a/app/src/main/res/layout/activity_liked_recipes.xml
+++ b/app/src/main/res/layout/activity_liked_recipes.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_liked_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LikedRecipesActivity">
@@ -50,6 +50,7 @@
         android:text="Like It Recipes"
         android:fontFamily="@font/jakartasanssemibold"
         android:textSize="18sp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="62dp"
         app:layout_constraintTop_toBottomOf="@id/liked_recipes_greetings_user_label"
         app:layout_constraintLeft_toLeftOf="@id/liked_recipes_greetings_icon"/>
@@ -67,7 +68,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/liked_recycle_view_recipes"
         android:layout_width="match_parent"
-        android:layout_height="560dp"
+        android:layout_height="500dp"
         app:layout_constraintTop_toBottomOf="@id/liked_recipes_like_it_label"
         app:layout_constraintBottom_toTopOf="@id/liked_recipes_frame_navigation"
         android:orientation="horizontal"
@@ -125,6 +126,41 @@
             tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/liked_loading_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:background="#80000000"/>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ProgressBar
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:background="@drawable/button_style_rounded"
+                android:backgroundTint="@android:color/white"
+                android:indeterminate="true"
+                tools:ignore="MissingConstraints"
+                android:layout_marginBottom="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Proses Upload"
+                android:fontFamily="@font/jakartasansmedium"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
+                android:gravity="center"/>
+        </LinearLayout>
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
