--- a/app/src/main/res/layout/activity_list_recipes.xml
+++ b/app/src/main/res/layout/activity_list_recipes.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_list_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListRecipesActivity">
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Available Recpies"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/jakartasanssemibold"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/list_recipes_greetings_label"
@@ -44,7 +45,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_recycle_view_recipes"
         android:layout_width="match_parent"
-        android:layout_height="680dp"
+        android:layout_height="600dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         app:layout_constraintTop_toBottomOf="@id/list_recipes_desc_label"
@@ -103,5 +104,40 @@
             tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/list_loading_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:background="#80000000"/>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ProgressBar
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:background="@drawable/button_style_rounded"
+                android:backgroundTint="@android:color/white"
+                android:indeterminate="true"
+                tools:ignore="MissingConstraints"
+                android:layout_marginBottom="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Proses Upload"
+                android:fontFamily="@font/jakartasansmedium"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
+                android:gravity="center"/>
+        </LinearLayout>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
