--- a/app/src/main/res/layout/activity_view_recipes.xml
+++ b/app/src/main/res/layout/activity_view_recipes.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_view_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActionRecipesActivity">
@@ -54,7 +54,7 @@
     <LinearLayout
         android:id="@+id/view_recipes_menu_frame"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@id/action_recipes_image_frame"
         android:orientation="horizontal">
 
@@ -114,7 +114,7 @@
     <TextView
         android:id="@+id/view_recipes_ingredients_recipes_text"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="180dp"
         android:background="@drawable/edit_text_style"
         android:padding="14dp"
         android:fontFamily="@font/jakartasansmedium"
@@ -141,7 +141,7 @@
     <TextView
         android:id="@+id/view_recipes_steps_recipes_text"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="180dp"
         android:background="@drawable/edit_text_style"
         android:padding="14dp"
         android:fontFamily="@font/jakartasansmedium"
